main.scss
@import '_variables';
@import '_mixins';

// TODO: Remove this and use Velcro/colors-module instead
$ftColor-DarkDarkGrey: #333333;

@if ($ft-header-sticky) {
	@if (length($ft-header-sticky) > 0) {
		
		@if (length($ft-header-sticky) < 4) {
			@include ftHeaderPositionStatic();
		}

		@if (length($ft-header-sticky) == 4) {
			@include ftHeaderPositionFixed();
		} @else {
			@each $layout in $ft-header-sticky {
				@include ftGridRespondTo($layout) {
					@include ftHeaderPositionFixed(); 
				}
			}				
		}	

	} @else {
		@include ftHeaderPositionFixed();
	}
	
} @else {
	@include ftHeaderPositionStatic();
}

.ft-header-logo {
	display: block;
	padding: 11px 0 31px;
	width: 82px;
	height: 35px;
	// default gif for when inline svg not supported
	// not wrapped in `no-inlinesvg` in case modernizr fails to run
	background: url(#{$ft-header-img-root}ft-logo.gif) no-repeat; 
}

.ft-header-logo .ft-initials {
	display: none;
}

.inlinesvg .ft-header-logo {
	background: #ffe2c6; 
	background: -moz-linear-gradient(top,  #ffe2c6 0%, #f7d8b9 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffe2c6), color-stop(100%,#f7d8b9)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ffe2c6 0%,#f7d8b9 100%); /* W3C */
	text-align: center; // needed for firefox
}

.inlinesvg .ft-header-logo .ft-initials {
	display: block;
	height: 35px;
	fill: $ftColor-DarkDarkGrey;
}

